Fix center align on projects page

--- a/basic.css
+++ b/basic.css
@@ -171,10 +171,11 @@
 	margin: 50px;
 	line-height: 1.7em;
 	display: inline-flex;
+	position: relative;
 }
 .projectgit
 {
-	display: inline-block;
+
     margin: -20px;
     overflow: hidden;
     height: 40px;
@@ -235,7 +236,7 @@
 	font-size: 16px;
 	font-weight: light;
 	text-align: center;
-	margin-left: 500px;
+
 	list-style: none;
 	line-height: 30px;
 }
@@ -246,7 +247,16 @@
 	font-size: 16px;
 	font-weight: light;
 	text-align: center;
-	margin-left: 450px;
+
 	list-style: none;
 	line-height: 30px;
+}
+.skillstitle
+{
+	text-align: center;
+	color: beige;
+	font-family: proxima-nova, Arial Narrow;
+	font-size: 30px;
+	font-weight: light;
+	margin-left: 30px;
 }
